[package]
name = "p2p-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Core Logic & P2P ---
anyhow = "1.0.100"                      # For flexible and easy error handling.
iroh-blobs = { version = "0.96.0" }      # The core Iroh library for handling data (blobs).
iroh = "0.94.0"                          # The core Iroh library for P2P connections and networking.
tokio = { version = "1.48.0", features = ["full"] } # Asynchronous runtime for managing concurrent operations.
futures = "0.3.31"                       # Utilities for working with asynchronous operations and streams.
walkdir = "2.5.0"                        # For recursively walking directory trees, used when sending folders.
rand = "0.9.2"                           # For generating random data, e.g., for the secret key.

# --- Web Server & HTTP Transfer ---
axum = { version = "0.8.6", features = ["http1", "http2", "json", "macros", "multipart", "ws"] } # Web framework to create the HTTP server for downloads.
ngrok = "0.16.2"                         # Creates a public tunnel to the local web server (for the "Send (web)" feature).
url = "2.5.7"                            # For parsing and handling URLs.
tokio-util = { version = "0.7.16", features = ["io"] } # Tokio utilities, specifically for converting a Reader into a Stream for Axum.
rustls = { version = "0.23.34", features = ["ring"] }   # A TLS library for secure connections.

# --- Graphical User Interface (GUI) ---
eframe = { version = "0.33.0", features = ["default"] } # The main framework for creating the GUI application.
egui = "0.33.0"                          # The widget library for building the user interface.
rfd = "0.15.4"                           # "Rustic File Dialog", for opening native system dialogs to pick files and folders.
bytesize = "2.1.0"                       # For formatting file sizes into a human-readable format (e.g., "1.2 MB").

# --- Utilities & Data Formatting ---
serde = { version = "1.0.228", features = ["derive"] } # For serializing and deserializing data structures.
hex = "0.4.3"                            # For encoding binary data into hexadecimal format.
n0-future = "0.3.0"                      # Provides stream extensions for easier async stream manipulation.

# --- Dependencies that might be for a CLI version or are transitive ---
clap = { version = "4.4.10", features = ["derive"] } # A powerful command-line argument parser.
console = "0.16.1"                       # Utilities for working with the terminal.
derive_more = { version = "2.0.1", features = ["display", "from_str"] } # Macros to auto-implement common traits.
futures-buffered = "0.2.12"              # For buffering asynchronous operations.
indicatif = "0.18.2"                     # For creating progress bars in the terminal.
num_cpus = "1.17.0"                      # For detecting the number of CPU cores.
tracing = "0.1.41"                       # A framework for instrumenting code to collect structured logs.
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] } # For configuring how traces are processed and displayed.
data-encoding = "2.9.0"                  # For data encoding and decoding.
crossterm = { version = "0.29.0", features = ["event-stream", "osc52"], optional = true } # For terminal manipulation.
irpc = "0.10.0"                          # A library for RPC (likely a transitive dependency from iroh).
tower = "0.5.2"                          # A library of modular and reusable components for network services (a dependency of Axum).